--- a/1/Makefile
+++ b/1/Makefile
@@ -1,6 +1,6 @@
-solution: solution.c
-	clang -Wall -O0 -std=c2x solution.c -o solution
+part1: part1.c
+	clang -Wall -O0 -std=c2x part1.c -o part1
 
-solution2: solution2.c
-	clang -Wall -O0 -std=c2x solution2.c -o solution2
+part2: part2.c
+	clang -Wall -O0 -std=c2x part2.c -o part2
 	
