--- a/3/Makefile
+++ b/3/Makefile
@@ -1,6 +1,6 @@
 part1: part1.c
 	clang -Wall -O0 -std=c2x part1.c -o part1
 
-part2: part2.c
-	clang -Wall -O0 -std=c2x part2.c -o part2
+part2: part2.c stack.c
+	clang -Wall -O0 -std=c2x stack.c part2.c -o part2
 	
